# sdwire-cli

./: TODO.md  default.nix  flake.nix  pyproject.toml
.github/workflows/: pypi_publish.yaml
debian/: changelog  control  copyright  gbp.conf  install  py3dist-overrides  rules  watch
debian/patches/: 0001-debian-add-udev-rules-for-sdwire3.patch  series
sdwire/: constants.py  main.py
sdwire/backend/: detect.py
sdwire/backend/device/: sdwire.py  sdwirec.py
src/: constants.py  detect.py  main.py
src/backend/: detect.py  utils.py
src/backend/device/: sdwire.py
src/device/: sdwire.py  usb_device.py
udev/: 90-sdwire.rules
